syntax = "proto3";

message ContextApplication {
  string app_id = 1;
  string app_version = 2;
  string app_platform = 3;
}

message ContextDevice {
  string device_brand = 1;
  string device_model = 2;
  string device_carrier = 3;
}

message Context {
  ContextApplication application = 1;
  ContextDevice device = 2;
}

message EventHeaderPora {
  string design_id = 1;
}

message EventHeader {
  EventHeaderPora pora = 2;
}

message EventPayloadPageOpen {
  string page_id = 1;
  string title = 2;
}

message EventPayloadStarPress {
  int64 rate = 1;
}

message EventPayloadScanProcessingStarted {
}

message EventCommon {
  int64 event_type = 1;
  int64 event_ts = 2;
  int64 session_id = 3;
}

message EventPayload {
  oneof event_type {
    EventPayloadPageOpen event_1 = 1;
    EventPayloadStarPress event_2 = 2;
    EventPayloadScanProcessingStarted event_4 = 4;
  }
}

message Event {
  EventCommon common = 1;
  EventHeader header = 2;
  EventPayload payload = 3;
}

message BatchCommon {
  string instance_id = 1;
  string batch_id = 2;
  string country_code = 3;
  string locale = 4;
  sint64 utc_offset = 5;
}

message Batch {
  BatchCommon common = 1;
  Context context = 2;
  repeated Event events = 3;
}
